--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ permalink: pretty
 # relative_permalinks: true
 
 # Setup
-title: Srisupang
+title: Srisupang T.
 tagline: "AMLR Lab"
-description: "Assistant Professor at CPE-SWU. Specialized in Computer Vision, AI, and ML. Founder of AMLR Lab"
+description: "Assistant Professor at CPE-SWU, Thailand. Specialized in Computer Vision, AI, and ML. Founder of AMLR Lab"
 url: https://mssrisupang.github.io
 baseurl: /
 
